added exercise 6 (SampleBot)

--- a/CPP052/Game/Game.vcxproj
+++ b/CPP052/Game/Game.vcxproj
@@ -99,6 +99,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bot.hpp" />
+    <ClInclude Include="Bots.hpp" />
     <ClInclude Include="Display.hpp" />
     <ClInclude Include="Factory.hpp" />
     <ClInclude Include="Library.hpp" />
