added exercise 9 (Policies)

--- a/CPP052/Game/Game.vcxproj
+++ b/CPP052/Game/Game.vcxproj
@@ -100,6 +100,7 @@
   <ItemGroup>
     <ClInclude Include="Bot.hpp" />
     <ClInclude Include="Bots.hpp" />
+    <ClInclude Include="Policies.hpp" />
     <ClInclude Include="Display.hpp" />
     <ClInclude Include="Factory.hpp" />
     <ClInclude Include="Library.hpp" />
